Updated exercises up to T07.04-Exercise-UpdateTheAdapter

--- a/Lesson06-Visualizer-Preferences/T06.01-Exercise-SetupTheActivity/app/src/main/res/values/strings.xml
+++ b/Lesson06-Visualizer-Preferences/T06.01-Exercise-SetupTheActivity/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <string name="app_name">Visualize</string>
 
-    <!-- TODO (4) Add string for Settings -->
-    
+    <!-- TODO (4) Add string for Settings DONE-->
+    <string name="title">Settings</string>
+
     <!-- - - - - - - - - - - - - - - -
           - Used by Preferences  -
           - - - - - - - - - - - - - - - -->
