--- a/Lesson06-Visualizer-Preferences/T06.07-Exercise-ListPreference/app/src/main/res/values/strings.xml
+++ b/Lesson06-Visualizer-Preferences/T06.07-Exercise-ListPreference/app/src/main/res/values/strings.xml
@@ -25,8 +25,18 @@
     <string name="pref_show_true">Shown</string>
     <string name="pref_show_false">Hidden</string>
 
-    <!-- TODO (2) Add string values for the list preference -->
-    <!-- TODO (3) Add a res->values->arrays.xml file which contains two arrays, one for
+
+    <!-- TODO (2) Add string values for the list preference DONE -->
+
+    <!-- Key name for color list preference -->
+    <string name="pref_color_key" translatable="false">color_key</string>
+
+    <!-- Title for color list preference -->
+    <string name="pref_color_label" translatable="false">Colors</string>
+    <string name="pref_color_label_red" translatable="false">Red</string>
+    <string name="pref_color_label_blue" translatable="false">Blue</string>
+    <string name="pref_color_label_green" translatable="false">Green</string>
+    <!-- TODO (3) Add a res->values->arrays.xml file which contains two arrays, one for DONE
         labels and one for values. The arrays should contain strings found in this file-->
 
     <!-- Value in SharedPreferences for red color option -->
